--- a/app/views/shared/_before_login_header.erb
+++ b/app/views/shared/_before_login_header.erb
@@ -1,7 +1,7 @@
 <nav class="w-full bg-cyan-600">
   <div class="flex justify-between items-center max-w-5xl mx-auto h-20">
     <div class="mx-8 md:text-3xl">
-      <%= link_to "MBTI交換アプリ", "#", class: "text-white" %>
+      <%= link_to "MBTI交換アプリ", root_path, class: "text-white" %>
     </div>
     <div>
       <%= link_to "ログイン", "#", class: "mx-8 bg-white text-black py-3 px-4 text-sm rounded md:text-base" %>
