--- a/app/views/shared/_before_login_header.erb
+++ b/app/views/shared/_before_login_header.erb
@@ -4,7 +4,7 @@
       <%= link_to "MBTI交換アプリ", root_path, class: "text-white" %>
     </div>
     <div>
-      <%= link_to "ログイン", "#", class: "mx-8 bg-white text-black py-3 px-4 text-sm rounded md:text-base" %>
+      <%= link_to "ログイン", new_user_session_path, class: "mx-8 bg-white text-black py-3 px-4 text-sm rounded md:text-base" %>
     </div>
   </div>
 </nav>
