feat: サインアップ・ログインページ整理

--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -8,6 +8,6 @@
     リスト作成により、コミュニティごとの整理も可能です。
   </p>
   <div class="w-screen flex justify-center items-center pb-10 px-20 ">
-    <%= link_to "ユーザー登録で利用を始める", "#", class: "mx-8 bg-white text-black rounded md:text-4xl py-3 px-20" %>
+    <%= link_to "ユーザー登録で利用を始める", new_user_registration_path, class: "mx-8 bg-white text-black rounded md:text-4xl py-3 px-20" %>
   </div>
 </div>
