--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,41 @@
-<h2>Sign up</h2>
+<div class="m-10">
+  <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">ユーザー登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field">
+      <%= f.label :ユーザー名 %><br />
+      <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email,  autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :メールアドレス %><br />
+      <%= f.email_field :email,  autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
+    <div class="field">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>（<%= @minimum_password_length %>文字以上で入力してください）</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :パスワード確認 %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :profile_id %><br />
-    <%= f.text_field :profile_id, pattern: "[a-zA-Z0-9]{5,}", title: "Please enter at least 5 alphanumeric characters", autocomplete: "profile_id" %>
-  </div>
+    <div class="field">
+      <%= f.label :ユーザーID %><br />
+      <%= f.text_field :profile_id, pattern: "[a-zA-Z0-9]{5,}", title: "Please enter at least 5 alphanumeric characters", autocomplete: "profile_id" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions my-5 bg-cyan-600 text-white rounded w-20 h-10 md:text-base flex items-center justify-center">
+      <%= f.submit "登録" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <!-- <%= render "devise/shared/links" %>  -->
+  
+</div>
