--- a/app/views/shared/_after_login_header.erb
+++ b/app/views/shared/_after_login_header.erb
@@ -3,9 +3,9 @@
     <div class="mx-8 md:text-3xl">
       <%= link_to "MBTI交換アプリ", "#", class: "text-white" %>
     </div>
-    <div class="relative inline-block text-left">
+    <div class="relative inline-block text-left mr-8">
       <div>
-        <button type="button" data-action="click->dropdown#toggle" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-4 py-3 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
+        <button type="button" data-action="click->dropdown#toggle" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-4 py-3  text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
           メニュー
           <svg class="-mr-1 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
             <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
