--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,44 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="m-10">
+  <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">ユーザー編集</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field">
+      <%= f.label :パスワード %><br />
+      <%= f.password_field :current_password, class: "w-full h-10 mb-5", autocomplete: "current-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :ユーザー名 %><br />
+      <%= f.text_field :username, autofocus: true, class: "w-full h-10 mb-5", autocomplete: "username" %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="field">
+      <%= f.label :コメント %><br />
+      <%= f.text_field :comment, autofocus: true, class: "w-full h-10 mb-5", autocomplete: "comment" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :プロフィールID %><br />
+      <%= f.text_field :profile_id, autofocus: true, class: "w-full h-10 mb-5", autocomplete: "profile_id" %>
+    </div>
+
+    <div class="mb-3">
+      <%= f.label :プロフィール写真 %><br />
+      <%= f.file_field :user_image, class: "form-control", class: "w-full h-10", accept: 'image/*' %>
+      <%= f.hidden_field :user_image_cache %>
+    </div>
+
+    <div class="flex">
+      <div class="actions my-5 bg-cyan-600 text-white rounded w-20 h-10 mr-5 md:text-base flex items-center justify-center">
+        <%= f.submit "完了" %>
+      </div>
+      <div class="actions my-5 bg-gray-400 text-white rounded w-20 h-10 md:text-base flex items-center justify-center">
+        <%= link_to "戻る", :back %>    
+      </div>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+  <!-- <h3>Cancel my account</h3>-->
+  <!-- <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>-->
+</div>
