--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,13 @@
   </head>
 
   <body>
+    <div class="bg-neutral-200 h-full w-full">
     <% if user_signed_in? %>
       <%= render 'shared/after_login_header' %>
     <% else %>
       <%= render 'shared/before_login_header' %>
     <% end %>
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
