--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,4 +1,21 @@
 <div class="m-10">
   <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">マイページ</h1>
-  <h1><%= @user.profile_id %>のユーザーページ</h1>
+  <div class="p-10 bg-white rounded md:text-base flex items-center">
+    <div class="card">
+      <%= image_tag @user.user_image_url, class: "card-img-top border-4 border-black rounded ", size: "200x200" %>
+    </div>
+    <div class="mx-10">
+      <div class="flex items-center">
+        <h1 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl lg:text-6xl dark:text-black"><%= @user.username %></h1>
+        <h3 class="text-2xl">（<%= @user.profile_id %>）</h3>
+      </div>
+      <h3 class="mb-4 text-3xl font-bold  dark:text-black">建築家(INTJ-A/INTJ-J)</h3>
+      <h3 class="text-2xl"><%= @user.comment %></h3>
+    </div>
+  </div>
+  
+  <div class="actions my-5 bg-cyan-600 text-white rounded w-20 h-10 mr-5 md:text-base flex items-center justify-center">
+    <%= link_to "編集", edit_user_registration_path %>
+  </div>
+
 </div>
