--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -10,7 +10,13 @@
         <h3 class="text-2xl">（<%= @user.profile_id %>）</h3>
       </div>
       <h3 class="mb-4 text-3xl font-bold  dark:text-black">建築家(INTJ-A/INTJ-J)</h3>
-      <h3 class="text-2xl"><%= @user.comment %></h3>
+      <h3 class="text-2xl">
+        <% unless @user.comment=="" %>
+          <%= @user.comment %>
+        <% else %>
+          コメントを登録しましょう！
+        <% end %>
+      </h3>
     </div>
   </div>
   
