--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -19,5 +19,8 @@
         <%= user.comment %>
       </h3>
     </div>
+    <td>フォロー数: <%= user.followings.count %></td>
+    <td>フォロワー数: <%= user.followers.count %></td>
+    <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
   </div>
 </div>
