--- a/app/views/relationships/_btn.html.erb
+++ b/app/views/relationships/_btn.html.erb
@@ -1,7 +1,11 @@
 <% if current_user != user %>
   <% if current_user.following?(user) %>
-    <%= link_to "フォロー中", user_relationships_path(user.id), data: { "turbo-method": :delete } %>
+    <div class="actions px-3 py-2 border-2 w-40 border-black text-black rounded md:text-base flex items-center justify-center">
+      <%= link_to "フォロー中", user_relationships_path(user.id), data: { "turbo-method": :delete } %>
+    </div>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), data: { "turbo-method": :post } %>
+    <div class="actions px-3 py-2 w-40 bg-cyan-600 text-white rounded md:text-base flex items-center justify-center">
+      <%= link_to "フォローする", user_relationships_path(user.id), data: { "turbo-method": :post } %>
+    </div>
   <% end %>
 <% end %>
