--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
-<div class="m-10">
+<div class="m-10 justify-between">
   <div class="p-10 bg-white rounded md:text-base flex items-center">
     <div class="card">
-      <%= image_tag user.user_image_url, class: "card-img-top border-4 border-black rounded ", size: "200x200" %>
+      <%= image_tag user.user_image_url, class: "card-img-top border-4 border-black rounded", size: "250x250" %>
     </div>
     <div class="mx-10">
       <div class="flex items-center">
@@ -18,9 +18,7 @@
       <h3 class="text-2xl">
         <%= user.comment %>
       </h3>
+      <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
     </div>
-    <td>フォロー数: <%= user.followings.count %></td>
-    <td>フォロワー数: <%= user.followers.count %></td>
-    <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
   </div>
 </div>
