--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,9 @@
 <div class="m-10">
   <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">ユーザー一覧</h1>
+
+  <div class="my-8 mx-10 px-3 py-2 bg-cyan-600 text-white rounded md:text-base flex items-center justify-center">
+    <%= link_to "フォロー中のユーザーを見る", user_followings_path(user_id: current_user.id) %>
+  </div>
+
   <%= render @users %>
 </div>
