--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,17 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <div class="bg-neutral-200 h-full w-full">
-    <% if user_signed_in? %>
-      <%= render 'shared/after_login_header' %>
-    <% else %>
-      <%= render 'shared/before_login_header' %>
-    <% end %>
-      <%= yield %>
+  <body class="min-h-screen flex flex-col">
+    <div class="flex-1 bg-neutral-200 w-full">
+      <% if user_signed_in? %>
+        <%= render 'shared/after_login_header' %>
+      <% else %>
+        <%= render 'shared/before_login_header' %>
+      <% end %>
+      <div class="max-w-5xl mx-auto">
+        <%= yield %>
+      </div>
     </div>
+    <%= render 'shared/footer' %>
   </body>
 </html>
