--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="mx-10">
       <div class="flex items-center">
-        <h1 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl lg:text-6xl dark:text-black"><%= user.username %></h1>
+        <h1 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl dark:text-black"><%= user.username %></h1>
         <h3 class="text-2xl">（<%= user.profile_id %>）</h3>
       </div>
       <h3 class="mb-4 text-3xl font-bold  dark:text-black">
