--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -19,7 +19,7 @@
         <h3 class="text-2xl">
           <%= user.comment %>
         </h3>
-        <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
+        <td><%= render 'relationships/btn', {user: user} %></td>
       </div>
     </div>
   </div>
