feat: ログイン前ヘッダーレスポンシブ対応

--- a/app/views/shared/_after_login_header.erb
+++ b/app/views/shared/_after_login_header.erb
@@ -1,9 +1,9 @@
 <nav class="w-full bg-cyan-600" data-controller="dropdown">
-  <div class="flex justify-between items-center max-w-5xl mx-auto h-20">
-    <div class="mx-8 md:text-3xl">
+  <div class="flex justify-between items-center mx-auto py-5">
+    <div class="mx-6 md:text-3xl">
       <%= link_to "MBTI交換アプリ", users_path, class: "text-white" %>
     </div>
-    <div class="relative inline-block text-left mr-8">
+    <div class="relative inline-block text-left mr-6">
       <div>
         <button type="button" data-action="click->dropdown#toggle" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-4 py-3  text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
           メニュー
