--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,9 +1,9 @@
 <div class="w-full bg-gradient-to-bl from-amber-300 via-amber-200 to-amber-100">
-  <div class="py-20">
-    <h1 class="font-bold text-center text-6xl">55秒であなたの<br>MBTIをシェアできる！</h1>
+  <div class="pt-10 text-center text-3xl sm:text-6xl">
+    <h1 class="font-bold">55秒であなたの<br>MBTIをシェアできる！</h1>
   </div>
-  <div class="px-20"><%= image_tag "personalities.jpg" %></div>
-  <p class="py-10 px-20 text-center text-4xl">
+  <div class="pt-10 px-10"><%= image_tag "personalities.jpg" %></div>
+  <p class="pt-10 px-20 text-center w-full">
     あなたのMBTIを登録・公開するだけでなく、<br>お友達をフォローしてすぐにMBTIを思い出せます。<br>
     リスト作成により、コミュニティごとの整理も可能です。
   </p>
