feat: ログイン・登録画面整理

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
       <% else %>
         <%= render 'shared/before_login_header' %>
       <% end %>
-      <div class="max-w-5xl mx-auto">
-        <% if notice %>
-          <p class="notice m-10 p-5 rounded text-2xl bg-green-400"><%= notice %></p>
+      <% if notice %>
+          <p class="notice p-5 rounded text-sm lg:text-2xl bg-green-400"><%= notice %></p>
         <% end %>
         <% if alert %>
-          <p class="alert m-10 p-5 rounded text-2xl bg-red-400"><%= alert %></p>
+          <p class="alert p-5 rounded text-sm lg:text-2xl bg-red-400"><%= alert %></p>
         <% end %>
+      <div class="max-w-5xl mx-auto">
         <%= yield %>
       </div>
     </div>
