--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -3,11 +3,11 @@
     <h1 class="font-bold">55秒であなたの<br>MBTIをシェアできる！</h1>
   </div>
   <div class="pt-10 px-10"><%= image_tag "personalities.jpg" %></div>
-  <p class="pt-10 px-20 text-center w-full">
+  <p class="pt-10 px-5 lg:text-3xl md:text-2xl sm:text-lg text-sm text-center w-full">
     あなたのMBTIを登録・公開するだけでなく、<br>お友達をフォローしてすぐにMBTIを思い出せます。<br>
-    リスト作成により、コミュニティごとの整理も可能です。
+    リストでのユーザー整理も可能です。
   </p>
-  <div class="w-screen flex justify-center items-center pb-10 px-20 ">
-    <%= link_to "ユーザー登録で利用を始める", new_user_registration_path, class: "mx-8 bg-white text-black rounded md:text-4xl py-3 px-20" %>
+  <div class="flex justify-center items-center py-5">
+    <%= link_to "ユーザー登録で利用を始める", new_user_registration_path, class: "m-4 bg-white text-black rounded text-1xl md:text-4xl py-3 px-3" %>
   </div>
 </div>
