--- a/app/views/relationships/_following.html.erb
+++ b/app/views/relationships/_following.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "フォロー中", user_relationships_path(user.id), class: "actions px-3 py-2 border-2 w-40 border-black text-black rounded md:text-base flex items-center justify-center", id: "following-button-for-user-#{user.id}", data: { "turbo-method": :delete } %>
+<%= link_to "フォロー中", user_relationships_path(user.id), class: "p-2 rounded border-2 border-black", id: "following-button-for-user-#{user.id}", data: { "turbo-method": :delete } %>
