--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,15 +1,12 @@
 <div class="m-10">
-  <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">マイページ</h1>
-  <div class="p-10 bg-white rounded md:text-base flex items-center">
-    <div class="card">
-      <%= image_tag @user.user_image_url, class: "card-img-top border-4 border-black rounded ", size: "200x200" %>
-    </div>
-    <div class="mx-10">
-      <div class="flex items-center">
-        <h1 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl lg:text-6xl dark:text-black"><%= @user.username %></h1>
-        <h3 class="text-2xl">（<%= @user.profile_id %>）</h3>
+    <div class="p-10 bg-white rounded md:flex items-center">
+      <div class="card">
+        <%= image_tag @user.user_image_url, class: "object-cover h-auto w-auto border-4 border-black rounded" %>
       </div>
-      <h3 class="mb-4 text-3xl font-bold  dark:text-black">
+      <div class="ml-10 md:w-3/4">
+        <h1 class="mb-2 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl dark:text-black"><%= @user.username %></h1>
+        <h3 class="text-2xl">（<%= @user.profile_id %>）</h3>
+        <h3 class="mb-4 text-3xl font-bold  dark:text-black">
         <% unless @user.mbti==""||@user.mbti==nil %>
           <%= @user.mbti %>
         <% else %>
