--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="m-10">
   <h2 class="mb-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">ユーザー詳細</h1>
 
-  <%= render @user %>
+  <%= render "users/user_detail",  {user: @user} %>
 </div>
