--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "フォローする", user_relationships_path(user.id), class: "p-2 rounded border-2 border-black", id: "follow-button-for-user-#{user.id}", data: { "turbo-method": :post } %>
+<%= link_to "フォローする", user_relationships_path(user.id), class: "p-1 text-xs sm:text-md rounded border-2 border-black", id: "follow-button-for-user-#{user.id}", data: { "turbo-method": :post } %>
