--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,7 +1,7 @@
 <div class="m-10">
   <h2 class="my-4 text-4xl leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-black">フォロー中一覧</h1>
 
-  <div class="my-8 mx-10 px-3 py-2 bg-cyan-600 text-white rounded md:text-base flex items-center justify-center">
+  <div class="my-8 px-3 py-2 bg-cyan-600 text-white rounded md:text-base flex items-center justify-center">
     <%= link_to "すべてのユーザーを見る", users_path %>
   </div>
 
