--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,20 +1,20 @@
 <a href="<%= user_path(user) %>">
-  <div class="m-10">
+  <div class="md:my-10 mb-10">
     <div class="p-10 bg-white rounded md:flex items-center">
       <div class="card">
-        <%= image_tag user.user_image_url, class: "object-cover h-auto w-auto border-4 border-black rounded" %>
+        <%= image_tag user.user_image_url, class: "mb-10 md:mb-0 object-cover h-auto w-auto border-4 border-black rounded mx-auto" %>
       </div>
-      <div class="ml-10 md:w-3/4">
-        <h1 class="mb-2 text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl dark:text-black"><%= user.username %></h1>
-        <h3 class="text-2xl">（<%= user.profile_id %>）</h3>
-        <h3 class="mb-4 text-3xl font-bold  dark:text-black">
+      <div class="md:ml-10 md:w-3/4">
+        <h1 class="mx-auto mb-2 text-3xl sm:text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl dark:text-black"><%= user.username %></h1>
+        <h3 class="mx-auto sm:text-2xl">（<%= user.profile_id %>）</h3>
+        <h3 class="mx-auto mb-4 sm:text-3xl font-bold  dark:text-black">
           <% unless user.mbti==""||user.mbti==nil %>
             <%= user.mbti %>
           <% else %>
             MBTI未登録
           <% end %>  
         </h3>
-        <h3 class="text-2xl">
+        <h3 class="mb-4 text-sm md:text-2xl">
           <%= render 'users/comment', {user: user} %>
         </h3>
         <td><%= render 'relationships/btn', {user: user} %></td>
