--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="items-center">
-    <h3 class="text-lg sm:text-2xl pb-5">自分のMBTIをシェアしましょう！</h3>
+    <h3 class="text-lg sm:text-2xl pb-5">自分のMBTIをシェアしましょう！！</h3>
     <%= qrcode current_user.id, 6 %>
   </div>
 
