feat: 写真がなくてもユーザー登録できるように変更

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,9 +20,9 @@
     </div>
 
     <div class="mb-3 mt-5">
-      <%= f.label :プロフィール写真 %><br />
-      <%= f.file_field :user_image, class: "form-control", class: "w-full h-10", accept: 'image/*' %>
-      <%= f.hidden_field :user_image_cache %>
+      <!-- f.label :プロフィール写真 -->
+      <!-- f.file_field :user_image, class: "form-control", class: "w-full h-10", accept: 'image/*' -->
+      <!-- f.hidden_field :user_image_cache -->
     </div>
 
     <div class="field">
