--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
   <div class="md:my-10 mb-10">
     <div class="p-10 bg-white rounded md:flex items-center">
       <div class="card">
-        <%= image_tag user.user_image_url, class: "mb-10 md:mb-0 object-cover h-auto w-auto border-4 border-black rounded mx-auto" %>
+        <!-- class: "mb-10 md:mb-0 object-cover h-auto w-auto border-4 border-black rounded mx-auto" -->
       </div>
       <div class="md:ml-10 md:w-3/4">
         <h1 class="mx-auto mb-2 text-3xl sm:text-4xl leading-none tracking-tight text-gray-900 font-bold md:text-5xl dark:text-black"><%= user.username %></h1>
