--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,11 @@
       <%= f.email_field :email, class: "w-full h-10 mb-5",  autocomplete: "email" %>
     </div>
 
+    <div class="mb-3 mt-5">
+      <%= f.label :プロフィール写真 %>
+      <%= f.file_field :image, class: "form-control", class: "w-full h-10", accept: 'image/*' %>
+    </div>
+
     <div class="field">
     <%= f.label :パスワード %>
     <% if @minimum_password_length %>
