--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -10,6 +10,10 @@
   <div class="items-center">
     <h3 class="text-lg sm:text-2xl pb-5">自分のMBTIをシェアしましょう！！</h3>
     <%= qrcode current_user.id, 6 %>
+
+    <%= link_to "https://twitter.com/share?url=https://mbti-sharing.onrender.com/#{ @user.id }&text=【私のMBTI】%0a%0a#{ @user.username }は、#{ @user.mbti }だよ！君もMBTI交換アプリで自分の性格をシェアしよう！ﾊﾊｯ!!%0a%0a", target: '_blank' do %>
+      <i class="fa-solid fa-star"></i>
+    <% end %>
   </div>
 
 </div>
