feat: cssファイルの整理

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -11,7 +11,7 @@
     <h3 class="text-lg sm:text-2xl pb-5">自分のMBTIをシェアしましょう！！</h3>
     <%= qrcode current_user.id, 6 %>
 
-    <%= link_to "https://twitter.com/share?url=https://mbti-sharing.onrender.com/#{ @user.id }&text=【私のMBTI】%0a%0a#{ @user.username }は、#{ @user.mbti }だよ！君もMBTI交換アプリで自分の性格をシェアしよう！ﾊﾊｯ!!%0a%0a", 
+    <%= link_to "https://twitter.com/share?url=https://mbti-sharing.onrender.com/#{ @user.id }&text=MBTIシェアできる神アプリ見つけたんだがwww%0a%0a", 
         class: "inline-block", target: '_blank' do %>
       <div class="flex items-center w-[50px] h-10 mt-5 p-5 bg-cyan-600 text-white rounded">
         <svg class="w-5 block fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
